# gesture-game

.kiro/specs/gesture-game/: requirements.md
apps/camera_device/: platformio.ini
apps/camera_device/include/: .gitignore
apps/camera_device/lib/CRtspSession/: CRtspSession.cpp  CRtspSession.h
apps/camera_device/lib/CStreamer/: CStreamer.cpp  CStreamer.h
apps/camera_device/lib/LinkedListElement/: LinkedListElement.h
apps/camera_device/lib/platglue-esp32/: platglue-esp32.h
apps/camera_device/src/: main.cpp
apps/connector/: .gitignore  Dockerfile  compose.yaml  pyproject.toml
apps/connector/src/: main.py
apps/connector/src/connector/: __init__.py
apps/connector/src/connector/api/: router.py
apps/connector/src/connector/common/: ai_models.py  setting.py
apps/connector/src/connector/functions/: ai_access.py  aws_s3.py  redis_client.py
apps/connector/src/connector/model/: models.py
apps/gen-token-lambda/: .gitignore  README.md  buildspec.yml  package-lock.json  package.json  template.yaml  test-event.json
apps/gen-token-lambda/src/: index.ts
apps/judge-agent/: Dockerfile  main.py  pyproject.toml
apps/ui/: .gitignore  README.md  env.example  package-lock.json  package.json
apps/ui/scripts/: download-ivs-wasm.js
apps/ui/src/app/: globals.css  layout.tsx  page.tsx
apps/ui/src/app/api-test/: page.tsx
apps/ui/src/app/chat/: page.tsx
apps/ui/src/atoms/: chatAtoms.ts  themeAtoms.ts
apps/ui/src/components/: AdminPanel.tsx  CaptionOverlay.tsx  DanmakuOverlay.tsx  FutureContentArea.tsx  IVSChatRoom.tsx  IVSFormIVSStagePlayer.tsx  IVSPlayer.tsx  IVSStagePlayer.tsx  Logo.tsx  Navigation.tsx  ThemeChangeOverlay.tsx  ThemeHandler.tsx
apps/ui/src/components/ui/: ErrorMessage.tsx  LoadingMessage.tsx
apps/ui/src/constants/: constant.ts
apps/ui/src/hooks/: useIVSForm.ts  useIVSPlayer.ts  useIVSStage.ts
apps/ui/src/services/: api.ts  chatService.ts
apps/ui/src/utils/: ivs.ts  random.ts
device/happyhappy/: happyhappy.ino
device/model/: README.md  arm.stl  body.stl  看板.stl
device/pi/: main.py  test.py
