[project]
name = "connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "motty", email = "motty.mio2@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "boto>=2.49.0",
    "boto3>=1.39.9",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.4",
    "taskipy>=1.14.1",
    "types-boto3>=1.39.9",
    "types-pillow>=10.2.0.20240822",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250611",
]
[tool.taskipy.tasks]
format = "ruff check --fix . && ruff format ."
check = "ruff check . && mypy ."
